---
source: dfir_rs/tests/surface_codegen.rs
expression: "df.meta_graph().unwrap().to_dot(& Default :: default())"
---
digraph {
    node [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace", style=filled];
    edge [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace"];
    n1v1 [label="(n1v1) None union()", shape=invhouse, fillcolor="#88aaff"]
    n2v1 [label="(n2v1) None for_each(|v| out_send.send(v).unwrap())", shape=house, fillcolor="#ffff88"]
    n3v1 [label="(n3v1) None source_iter([1])", shape=invhouse, fillcolor="#88aaff"]
    n4v1 [label="(n4v1) None source_iter([2])", shape=invhouse, fillcolor="#88aaff"]
    n1v1 -> n2v1
    n3v1 -> n1v1 [label="0"]
    n4v1 -> n1v1 [label="1"]
    subgraph "cluster n1v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1\nstratum 0"
        n3v1
        n4v1
        n1v1
        n2v1
        subgraph "cluster_sg_1v1_var_m" {
            label="var m"
            n1v1
            n2v1
        }
    }
}
